# blind-sig-demo

./: .gitignore  Cargo.toml  README.md  Rocket.toml
client/: Cargo.toml  LICENSE_MIT  index.html  script.js  style.css
client/src/: lib.rs  nostr.rs
database_scripts/: down.sql  up.sql
html/: index.html  script.js  style.css
src/: api.rs  lib.rs  main.rs
