[package]
name = "blind-sig-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk = "0.20.0"
miniscript = "7.0.0"
json = "0.12.4"
serde = "1.0.140"
schnorr_fun = { git = "https://github.com/nickfarrow/secp256kfun", rev = "2028bd30b5ccddb0c2189ed976038cb5c3ebd577"}
sha2 = "0.10"
rand = "0.8.5"


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

